platform/traefik/middleware-ip-whitelist.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ip-whitelist
  namespace: traefik
spec:
  ipWhiteList:
    sourceRange:
      - 192.30.252.0/22
      - 185.199.108.0/22
      - 140.82.112.0/20
      - 143.55.64.0/20
      - 85.64.215.183/32
      - 62.90.112.29/32
