platform/traefik/google-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: google-auth
spec:
  forwardAuth:
    address: https://oauth.kfirs.com/verify
    trustForwardHeader: true
    authResponseHeaders:
      - Set-Cookie
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oauth-http
spec:
  entryPoints: [web]
  routes:
    - kind: Rule
      match: Host(`oauth.kfirs.com`)
      middlewares:
        - name: redirect-to-https
      services:
        - kind: Service
          name: traefik-google-oidc-auth-server
          port: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oauth-https
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`oauth.kfirs.com`)
      services:
        - kind: Service
          name: traefik-google-oidc-auth-server
          port: http
  tls:
    secretName: oauth-kfirs-com-tls
